favicon and css additions

--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ theme: jekyll-agency
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title: Advance Fleet Services
-email: j.woods@atmllcs.com
-description: "Commited to quality, service, & keeping your fleet running strong."
-author: Jesse Woods
+title: Forest Skufca
+email: forestskufca@gmail.com
+description: "Sr Marketing Operations Manager - Passionate about advancing brands stories through strategy & creative digital tooling."
+author: Forest Skufca
 # logo:     #optional, defaults to site title
 # path: assets\img\clients\creative-market.jpg
 # height: 60 #height in px, defaults to 52px
